# flourishing-mi-sim

./: .gitignore  MAINTAINERS.md  README.md  pyproject.toml
src/mi_sim/: __init__.py  __main__.py  cli.py  client_llm_loader.py  conversation_environment.py  counselor_llm_loader.py  env_utils.py  mi_counselor_agent.py  mi_prompt_knowledge.py  openai_llm.py  paths.py  perma_client_agent.py  self_play_batch.py  session_log_tools.py
src/mi_sim/config/: README.md  client_profiles.yaml  client_prompt_rules.md  layer3_layer4_action_prompts.yaml  mi_knowledge.md  model_settings.yaml  phase_slot_quality_rubrics.yaml
